slang-derive/tests/ui/fail/enum_invalid_variant.rs
use slang_derive::SlangAttribute;

#[derive(SlangAttribute)]
enum ShouldFail {
	InvalidVariant,
	AlsoInvalid { field: i32 },
}

fn main() {}
