slang-derive/tests/ui/fail/enum_invalid_variant.stderr
error: Enum variants must have exactly one unnamed field (e.g., Variant(InnerType))
 --> tests/ui/fail/enum_invalid_variant.rs:5:2
  |
5 |     InvalidVariant,
  |     ^^^^^^^^^^^^^^

error: Enum variants must have exactly one unnamed field (e.g., Variant(InnerType))
 --> tests/ui/fail/enum_invalid_variant.rs:6:2
  |
6 |     AlsoInvalid { field: i32 },
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `match` arm with no body
 --> tests/ui/fail/enum_invalid_variant.rs:5:2
  |
5 |     InvalidVariant,
  |     ^^^^^^^^^^^^^^
  |
help: add a body after the pattern
  |
5 |     InvalidVariant => { todo!() },
  |                    ++++++++++++++

error: `match` arm with no body
 --> tests/ui/fail/enum_invalid_variant.rs:6:2
  |
6 |     AlsoInvalid { field: i32 },
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: add a body after the pattern
  |
6 |     AlsoInvalid { field: i32 } => { todo!() },
  |                                ++++++++++++++

warning: unreachable pattern
 --> tests/ui/fail/enum_invalid_variant.rs:6:2
  |
5 |     InvalidVariant,
  |     -------------- matches any value
6 |     AlsoInvalid { field: i32 },
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
  |
  = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default
